--- a/src/app/components/parts/restaurant/restaurant.component.css
+++ b/src/app/components/parts/restaurant/restaurant.component.css
@@ -4,10 +4,10 @@
    display: flex;
    align-items: flex-start;
    justify-content: center;
-   margin-top: 4rem;    
+   margin-top: 0rem;    
    background-color: #f1a900;
    width: 100%;
-   min-height: 110vh;
+   min-height: 100vh;
     
     
 }
